--- a/app/src/main/res/screens/dictionary/animation_menu_dialog/layout/fragment_dictionary_set_2.xml
+++ b/app/src/main/res/screens/dictionary/animation_menu_dialog/layout/fragment_dictionary_set_2.xml
@@ -2,7 +2,6 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/motion_dictionary"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -39,10 +38,10 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/fab_state"
-        android:rotation="405"
+        android:elevation="@dimen/dictionary_fab_elevation"
+        android:rotation="45"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_add"
-        android:visibility="invisible"
         app:altSrc="@drawable/ic_check"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
@@ -61,18 +60,15 @@
         android:layout_height="0dp"
         android:background="@drawable/fab_state"
         android:clickable="true"
+        android:elevation="@dimen/dictionary_fab_elevation"
         android:focusable="true"
         android:padding="@dimen/dictionary_fab_padding"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_category_add"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/fab_add"
+        app:layout_constraintCircle="@+id/fab_add"
+        app:layout_constraintCircleRadius="100dp"
         app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="@+id/fab_add"
-        app:layout_constraintStart_toStartOf="@+id/fab_add"
-        app:layout_constraintTop_toTopOf="@+id/fab_add"
-        app:layout_constraintWidth_percent="0.15"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintWidth_percent="0.15" />
 
     <!--==============================
                   Fab photo
@@ -83,18 +79,16 @@
         android:layout_height="0dp"
         android:background="@drawable/fab_state"
         android:clickable="true"
+        android:elevation="@dimen/dictionary_fab_elevation"
         android:focusable="true"
         android:padding="@dimen/dictionary_fab_padding"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_photo_add"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/fab_add"
+        app:layout_constraintCircle="@+id/fab_add"
+        app:layout_constraintCircleAngle="235"
+        app:layout_constraintCircleRadius="100dp"
         app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="@+id/fab_add"
-        app:layout_constraintStart_toStartOf="@+id/fab_add"
-        app:layout_constraintTop_toTopOf="@+id/fab_add"
-        app:layout_constraintWidth_percent="0.15"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintWidth_percent="0.15" />
 
     <!--==============================
                   Fab file
@@ -110,12 +104,10 @@
         android:padding="@dimen/dictionary_fab_padding"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_file_add"
-        app:layout_constraintBottom_toBottomOf="@+id/fab_add"
+        app:layout_constraintCircle="@+id/fab_add"
+        app:layout_constraintCircleAngle="125"
+        app:layout_constraintCircleRadius="100dp"
         app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="@+id/fab_add"
-        app:layout_constraintStart_toStartOf="@+id/fab_add"
-        app:layout_constraintTop_toTopOf="@+id/fab_add"
-        app:layout_constraintWidth_percent="0.15"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintWidth_percent="0.15" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
