--- a/app/src/main/res/screens/dictionary/animation_menu_dialog/layout/fragment_dictionary_set_3.xml
+++ b/app/src/main/res/screens/dictionary/animation_menu_dialog/layout/fragment_dictionary_set_3.xml
@@ -3,7 +3,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/motion_dictionary"
+    android:id="@+id/layout_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -71,8 +71,7 @@
         app:layout_constraintEnd_toEndOf="@+id/fab_add"
         app:layout_constraintStart_toStartOf="@+id/fab_add"
         app:layout_constraintTop_toTopOf="@+id/fab_add"
-        app:layout_constraintWidth_percent="0.15"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintWidth_percent="0.15" />
 
     <!--==============================
                   Fab photo
@@ -93,8 +92,7 @@
         app:layout_constraintEnd_toEndOf="@+id/fab_add"
         app:layout_constraintStart_toStartOf="@+id/fab_add"
         app:layout_constraintTop_toTopOf="@+id/fab_add"
-        app:layout_constraintWidth_percent="0.15"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintWidth_percent="0.15" />
 
     <!--==============================
                   Fab file
@@ -115,7 +113,6 @@
         app:layout_constraintEnd_toEndOf="@+id/fab_add"
         app:layout_constraintStart_toStartOf="@+id/fab_add"
         app:layout_constraintTop_toTopOf="@+id/fab_add"
-        app:layout_constraintWidth_percent="0.15"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintWidth_percent="0.15" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
