--- a/app/src/main/res/screens/dictionary/animation_menu_dialog/layout/fragment_dictionary_set_4.xml
+++ b/app/src/main/res/screens/dictionary/animation_menu_dialog/layout/fragment_dictionary_set_4.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/motion_dictionary"
+    android:id="@+id/layout_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <!--==============================
-                  TABs
-    ==============================-->
+                      TABs
+     ==============================-->
     <include
         android:id="@+id/tabs"
         layout="@layout/tabs"
@@ -20,42 +21,36 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <!--==============================
-              RecyclerView
-    ==============================-->
+                  RecyclerView
+     ==============================-->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_list_words"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:visibility="invisible"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tabs" />
 
     <!--==============================
-                 Fab add
-    ==============================-->
+                  Fab add
+     ==============================-->
     <androidx.constraintlayout.utils.widget.ImageFilterView
         android:id="@+id/fab_add"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/fab_state"
-        android:clickable="true"
-        android:elevation="@dimen/dictionary_fab_elevation"
-        android:focusable="true"
-        android:rotation="360"
+        android:rotation="405"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_add"
+        android:visibility="invisible"
         app:altSrc="@drawable/ic_check"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.8"
         app:layout_constraintWidth_percent="0.15"
-        app:overlay="false"
-        tools:src="@drawable/ic_check" />
+        app:overlay="false" />
 
     <!--==============================
                   Fab category
@@ -66,16 +61,17 @@
         android:layout_height="0dp"
         android:background="@drawable/fab_state"
         android:clickable="true"
+        android:elevation="@dimen/dictionary_fab_elevation"
         android:focusable="true"
         android:padding="@dimen/dictionary_fab_padding"
+        android:visibility="invisible"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_category_add"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@id/fab_add"
         app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="@id/fab_add"
-        app:layout_constraintStart_toStartOf="@id/fab_add"
-        app:layout_constraintTop_toTopOf="@id/fab_add"
+        app:layout_constraintBottom_toBottomOf="@+id/fab_add"
+        app:layout_constraintEnd_toEndOf="@+id/fab_add"
+        app:layout_constraintStart_toStartOf="@+id/fab_add"
+        app:layout_constraintTop_toTopOf="@+id/fab_add"
         app:layout_constraintWidth_percent="0.15" />
 
     <!--==============================
@@ -91,12 +87,11 @@
         android:padding="@dimen/dictionary_fab_padding"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_photo_add"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@id/fab_add"
+        app:layout_constraintBottom_toBottomOf="@+id/fab_add"
         app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="@id/fab_add"
-        app:layout_constraintStart_toStartOf="@id/fab_add"
-        app:layout_constraintTop_toTopOf="@id/fab_add"
+        app:layout_constraintEnd_toEndOf="@+id/fab_add"
+        app:layout_constraintStart_toStartOf="@+id/fab_add"
+        app:layout_constraintTop_toTopOf="@+id/fab_add"
         app:layout_constraintWidth_percent="0.15" />
 
     <!--==============================
@@ -113,21 +108,11 @@
         android:scaleType="centerCrop"
         android:src="@drawable/ic_file_add"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@id/fab_add"
+        app:layout_constraintBottom_toBottomOf="@+id/fab_add"
         app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="@id/fab_add"
-        app:layout_constraintStart_toStartOf="@id/fab_add"
-        app:layout_constraintTop_toTopOf="@id/fab_add"
+        app:layout_constraintEnd_toEndOf="@+id/fab_add"
+        app:layout_constraintStart_toStartOf="@+id/fab_add"
+        app:layout_constraintTop_toTopOf="@+id/fab_add"
         app:layout_constraintWidth_percent="0.15" />
-
-    <!--==============================
-           Layout word creation
-     ==============================-->
-    <include
-        android:id="@+id/layout_word_creation_start"
-        layout="@layout/layout_word_creation_start"
-        android:visibility="visible"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
