--- a/app/src/main/res/screens/dictionary/animation_menu_dialog/layout/fragment_dictionary_set_5.xml
+++ b/app/src/main/res/screens/dictionary/animation_menu_dialog/layout/fragment_dictionary_set_5.xml
@@ -3,7 +3,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/motion_dictionary"
+    android:id="@+id/layout_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -53,25 +53,26 @@
         app:overlay="false" />
 
     <!--==============================
-                  Fab category
-     ==============================-->
+                 Fab category
+    ==============================-->
     <ImageButton
         android:id="@+id/fab_category"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/fab_state"
         android:clickable="true"
+        android:elevation="@dimen/dictionary_fab_elevation"
         android:focusable="true"
         android:padding="@dimen/dictionary_fab_padding"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_category_add"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/fab_add"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="@+id/fab_add"
         app:layout_constraintStart_toStartOf="@+id/fab_add"
         app:layout_constraintTop_toTopOf="@+id/fab_add"
-        app:layout_constraintWidth_percent="0.15"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintWidth_percent="0.15" />
 
     <!--==============================
                   Fab photo
@@ -82,18 +83,17 @@
         android:layout_height="0dp"
         android:background="@drawable/fab_state"
         android:clickable="true"
-        android:elevation="@dimen/dictionary_fab_elevation"
         android:focusable="true"
         android:padding="@dimen/dictionary_fab_padding"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_photo_add"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/fab_add"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="@+id/fab_add"
         app:layout_constraintStart_toStartOf="@+id/fab_add"
         app:layout_constraintTop_toTopOf="@+id/fab_add"
-        app:layout_constraintWidth_percent="0.15"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintWidth_percent="0.15" />
 
     <!--==============================
                   Fab file
@@ -108,13 +108,11 @@
         android:padding="@dimen/dictionary_fab_padding"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_file_add"
-        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/fab_add"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="@+id/fab_add"
         app:layout_constraintStart_toStartOf="@+id/fab_add"
         app:layout_constraintTop_toTopOf="@+id/fab_add"
-        app:layout_constraintWidth_percent="0.15"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintWidth_percent="0.15" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
