--- a/app/src/main/res/screens/dictionary/animation_word_creator_dialog/layout/fragment_dictionary_set_6.xml
+++ b/app/src/main/res/screens/dictionary/animation_word_creator_dialog/layout/fragment_dictionary_set_6.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,8 +7,8 @@
     android:layout_height="match_parent">
 
     <!--==============================
-                      TABs
-     ==============================-->
+                  TABs
+    ==============================-->
     <include
         android:id="@+id/tabs"
         layout="@layout/tabs"
@@ -21,35 +20,42 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <!--==============================
-                  RecyclerView
-     ==============================-->
+              RecyclerView
+    ==============================-->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_list_words"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:visibility="invisible"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tabs" />
 
     <!--==============================
-                  Fab add
-     ==============================-->
+                 Fab add
+    ==============================-->
     <androidx.constraintlayout.utils.widget.ImageFilterView
         android:id="@+id/fab_add"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/fab_state"
-        android:rotation="45"
+        android:clickable="true"
+        android:elevation="@dimen/dictionary_fab_elevation"
+        android:focusable="true"
+        android:rotation="360"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_add"
         app:altSrc="@drawable/ic_check"
-        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.8"
         app:layout_constraintWidth_percent="0.15"
-        app:overlay="false" />
+        app:overlay="false"
+        tools:src="@drawable/ic_check" />
 
     <!--==============================
                   Fab category
@@ -60,16 +66,17 @@
         android:layout_height="0dp"
         android:background="@drawable/fab_state"
         android:clickable="true"
-        android:elevation="@dimen/dictionary_fab_elevation"
         android:focusable="true"
         android:padding="@dimen/dictionary_fab_padding"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_category_add"
-        app:layout_constraintCircle="@+id/fab_add"
-        app:layout_constraintCircleRadius="100dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@id/fab_add"
         app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintWidth_percent="0.15"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintEnd_toEndOf="@id/fab_add"
+        app:layout_constraintStart_toStartOf="@id/fab_add"
+        app:layout_constraintTop_toTopOf="@id/fab_add"
+        app:layout_constraintWidth_percent="0.15" />
 
     <!--==============================
                   Fab photo
@@ -80,17 +87,17 @@
         android:layout_height="0dp"
         android:background="@drawable/fab_state"
         android:clickable="true"
-        android:elevation="@dimen/dictionary_fab_elevation"
         android:focusable="true"
         android:padding="@dimen/dictionary_fab_padding"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_photo_add"
-        app:layout_constraintCircle="@+id/fab_add"
-        app:layout_constraintCircleAngle="235"
-        app:layout_constraintCircleRadius="100dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@id/fab_add"
         app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintWidth_percent="0.15"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintEnd_toEndOf="@id/fab_add"
+        app:layout_constraintStart_toStartOf="@id/fab_add"
+        app:layout_constraintTop_toTopOf="@id/fab_add"
+        app:layout_constraintWidth_percent="0.15" />
 
     <!--==============================
                   Fab file
@@ -101,16 +108,25 @@
         android:layout_height="0dp"
         android:background="@drawable/fab_state"
         android:clickable="true"
-        android:elevation="@dimen/dictionary_fab_elevation"
         android:focusable="true"
         android:padding="@dimen/dictionary_fab_padding"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_file_add"
-        app:layout_constraintCircle="@+id/fab_add"
-        app:layout_constraintCircleAngle="125"
-        app:layout_constraintCircleRadius="100dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@id/fab_add"
         app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintWidth_percent="0.15"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintEnd_toEndOf="@id/fab_add"
+        app:layout_constraintStart_toStartOf="@id/fab_add"
+        app:layout_constraintTop_toTopOf="@id/fab_add"
+        app:layout_constraintWidth_percent="0.15" />
+
+    <!--==============================
+           Layout word creation
+     ==============================-->
+    <include
+        android:id="@+id/layout_word_creator_start"
+        layout="@layout/layout_word_creator_start"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
