--- a/app/src/main/res/screens/dictionary/include_components/animation_prompt/layout/layout_word_creator_set_1.xml
+++ b/app/src/main/res/screens/dictionary/include_components/animation_prompt/layout/layout_word_creator_set_1.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/motion_word_creation"
+        android:id="@+id/motion_word_creator"
         clickHideKeyboard="@{true}"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -119,10 +118,10 @@
             app:layout_constraintTop_toBottomOf="@+id/guideH_40" />
 
         <!--==============================
-                ImageFilter list additional translation
+               ImageFilter list translations
         ==============================-->
-        <ImageView
-            android:id="@+id/ifv_list_additional_translation"
+        <androidx.constraintlayout.utils.widget.ImageFilterView
+            android:id="@+id/ifv_list_translations"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="@dimen/words_creation_edit_margin"
@@ -137,10 +136,10 @@
             app:layout_constraintTop_toBottomOf="@+id/guideH_40" />
 
         <!--==============================
-                ImageButton additional translation
+                ImageButton translations
         ==============================-->
         <ImageButton
-            android:id="@+id/btn_additional_translation"
+            android:id="@+id/ib_translations"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="@dimen/words_creation_edit_margin"
@@ -162,16 +161,13 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:rotation="180"
-            android:rotationY="360"
             android:src="@drawable/ic_prompt_add"
-            android:translationY="-25dp"
             app:altSrc="@drawable/ic_prompt_add_shine"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toStartOf="@+id/guideV_85"
             app:layout_constraintStart_toEndOf="@+id/guideV_15"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_percent="0.2"
-            tools:src="@drawable/ic_prompt_add_shine" />
+            app:layout_constraintWidth_percent="0.2" />
 
         <!--==============================
                     Layout prompt
@@ -181,11 +177,11 @@
             layout="@layout/layout_prompt"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/guideH_15" />
+            app:layout_constraintEnd_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/guideH_15"
+            app:layout_constraintWidth_percent="0.999" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
