--- a/app/src/main/res/screens/dictionary/include_components/animation_translations/layout/layout_word_creator_set_4.xml
+++ b/app/src/main/res/screens/dictionary/include_components/animation_translations/layout/layout_word_creator_set_4.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.motion.widget.MotionLayout
-        android:id="@+id/motion_word_creation"
+        android:id="@+id/motion_word_creator"
         clickHideKeyboard="@{true}"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutDescription="@xml/word_creation_scene">
+        app:layoutDescription="@xml/word_creator_scene">
 
         <!--==============================
                   Guide horizontal
@@ -68,6 +68,7 @@
             android:focusable="true"
             android:scaleType="centerCrop"
             android:src="@drawable/image_add_state"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/guideH_25"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toStartOf="@+id/guideV_85"
@@ -90,6 +91,7 @@
             android:nextFocusForward="@id/edit_translation"
             android:singleLine="true"
             android:textSize="@dimen/edit_text_size"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/guideH_40"
             app:layout_constraintEnd_toStartOf="@+id/guideV_85"
             app:layout_constraintStart_toEndOf="@+id/guideV_15"
@@ -110,6 +112,7 @@
             android:inputType="textCapSentences"
             android:singleLine="true"
             android:textSize="@dimen/edit_text_size"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/guideH_55"
             app:layout_constraintEnd_toStartOf="@+id/guideV_85"
             app:layout_constraintStart_toEndOf="@+id/guideV_15"
@@ -132,10 +135,10 @@
             app:layout_constraintTop_toTopOf="@+id/edit_translation" />
 
         <!--==============================
-                ImageFilter list additional translation
+                ImageFilter list translations
         ==============================-->
         <androidx.constraintlayout.utils.widget.ImageFilterView
-            android:id="@+id/ifv_list_additional_translation"
+            android:id="@+id/ifv_list_translations"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="@dimen/words_creation_edit_margin"
@@ -150,15 +153,16 @@
             app:layout_constraintTop_toBottomOf="@+id/guideH_40" />
 
         <!--==============================
-                ImageButton additional translation
+                ImageButton translations
         ==============================-->
         <ImageButton
-            android:id="@+id/ib_additional_translation"
+            android:id="@+id/ib_translations"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="@dimen/words_creation_edit_margin"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_add"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/guideH_55"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
@@ -174,6 +178,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:src="@drawable/ic_prompt_add"
+            android:visibility="invisible"
             app:altSrc="@drawable/ic_prompt_add_shine"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
@@ -200,15 +205,15 @@
                 Layout additional translation
         ==============================-->
         <include
-            android:id="@+id/layout_additional_translation"
-            layout="@layout/layout_additional_translation"
+            android:id="@+id/layout_translations"
+            layout="@layout/layout_translations"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="@+id/ifv_list_additional_translation"
-            app:layout_constraintEnd_toEndOf="@+id/ifv_list_additional_translation"
-            app:layout_constraintStart_toStartOf="@+id/ifv_list_additional_translation"
-            app:layout_constraintTop_toTopOf="@+id/ifv_list_additional_translation" />
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@+id/ifv_prompt_add"
+            app:layout_constraintEnd_toStartOf="@+id/guideV_85"
+            app:layout_constraintStart_toEndOf="@+id/guideV_15"
+            app:layout_constraintTop_toBottomOf="@+id/guideH_40" />
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
 </layout>
