--- a/app/src/main/res/screens/dictionary/include_components/layout/item_translation.xml
+++ b/app/src/main/res/screens/dictionary/include_components/layout/item_translation.xml
@@ -2,13 +2,13 @@
 
 <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/scrollH_item_additional_translation"
+    android:id="@+id/scrollH_item_translation"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:scrollbars="none">
 
     <TextView
-        android:id="@+id/item_additional_translation"
+        android:id="@+id/item_translation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="25sp"
