--- a/app/src/main/res/screens/dictionary/include_components/layout/layout_word_creator.xml
+++ b/app/src/main/res/screens/dictionary/include_components/layout/layout_word_creator.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.motion.widget.MotionLayout
         android:id="@+id/motion_word_creator"
@@ -11,7 +10,7 @@
         app:layoutDescription="@xml/word_creator_scene">
 
         <!--==============================
-                  Guide horizontal
+               Guide horizontal
         ==============================-->
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideH_15"
@@ -42,7 +41,7 @@
             app:layout_constraintGuide_percent="0.55" />
 
         <!--==============================
-                  Guide vertical
+               Guide vertical
         ==============================-->
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideV_15"
@@ -59,7 +58,7 @@
             app:layout_constraintGuide_percent="0.85" />
 
         <!--==============================
-                     Image add
+               Image add
         ==============================-->
         <ImageView
             android:id="@+id/iv_img_add"
@@ -68,15 +67,10 @@
             android:clickable="true"
             android:focusable="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/image_add_state"
-            app:layout_constraintBottom_toTopOf="@+id/guideH_25"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintEnd_toStartOf="@+id/guideV_85"
-            app:layout_constraintStart_toEndOf="@+id/guideV_15"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:src="@drawable/image_add_state" />
 
         <!--==============================
-                  Edit word
+               Edit word
         ==============================-->
         <EditText
             android:id="@+id/edit_word"
@@ -90,14 +84,10 @@
             android:inputType="textCapSentences"
             android:nextFocusForward="@id/edit_translation"
             android:singleLine="true"
-            android:textSize="@dimen/edit_text_size"
-            app:layout_constraintBottom_toTopOf="@+id/guideH_40"
-            app:layout_constraintEnd_toStartOf="@+id/guideV_85"
-            app:layout_constraintStart_toEndOf="@+id/guideV_15"
-            app:layout_constraintTop_toBottomOf="@+id/guideH_25" />
+            android:textSize="@dimen/edit_text_size" />
 
         <!--==============================
-                  Edit translation
+               Edit translation
         ==============================-->
         <EditText
             android:id="@+id/edit_translation"
@@ -106,30 +96,23 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/words_creation_edit_margin"
             android:gravity="center"
+            android:hint="@string/word_creation_edit_enter_translation"
             android:imeOptions="actionDone"
             android:inputType="textCapSentences"
             android:singleLine="true"
-            android:textSize="@dimen/edit_text_size"
-            app:layout_constraintBottom_toTopOf="@+id/guideH_55"
-            app:layout_constraintEnd_toStartOf="@+id/guideV_85"
-            app:layout_constraintStart_toEndOf="@+id/guideV_15"
-            app:layout_constraintTop_toBottomOf="@+id/guideH_40" />
+            android:textSize="@dimen/edit_text_size" />
 
         <!--==============================
-                  Text translation
+               Text translation
         ==============================-->
         <TextView
             android:id="@+id/tv_translation"
-            android:layout_width="1dp"
+            android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="@dimen/words_creation_edit_margin"
+            android:gravity="center"
             android:lines="1"
-            android:textSize="@dimen/edit_text_size"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="@+id/ifv_list_translations"
-            app:layout_constraintEnd_toEndOf="@+id/ifv_list_translations"
-            app:layout_constraintStart_toStartOf="@+id/ifv_list_translations"
-            app:layout_constraintTop_toTopOf="@+id/ifv_list_translations" />
+            android:textSize="@dimen/edit_text_size" />
 
         <!--==============================
                ImageFilter list translations
@@ -141,17 +124,10 @@
             android:layout_margin="@dimen/words_creation_edit_margin"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_list_black"
-            app:altSrc="@drawable/ic_list_blue"
-            app:crossfade="1"
-            app:layout_constraintBottom_toTopOf="@+id/guideH_55"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintEnd_toStartOf="@+id/guideV_15"
-            app:layout_constraintHeight_percent="0.07"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/guideH_40" />
+            app:altSrc="@drawable/ic_list_blue" />
 
         <!--==============================
-                ImageButton translations
+               ImageButton translations
         ==============================-->
         <ImageButton
             android:id="@+id/ib_translations"
@@ -159,43 +135,31 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/words_creation_edit_margin"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_add"
-            app:layout_constraintBottom_toTopOf="@+id/guideH_55"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.07"
-            app:layout_constraintStart_toEndOf="@+id/guideV_85"
-            app:layout_constraintTop_toBottomOf="@+id/guideH_40" />
+            android:src="@drawable/ic_add" />
 
         <!--==============================
-              ImageFilter prompt add
+               ImageFilter prompt add
         ==============================-->
         <androidx.constraintlayout.utils.widget.ImageFilterView
             android:id="@+id/ifv_prompt_add"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:src="@drawable/ic_prompt_add"
-            app:altSrc="@drawable/ic_prompt_add_shine"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintEnd_toStartOf="@+id/guideV_85"
-            app:layout_constraintStart_toEndOf="@+id/guideV_15"
-            app:layout_constraintTop_toBottomOf="@+id/guideH_55"
-            app:layout_constraintWidth_percent="0.2" />
+            app:altSrc="@drawable/ic_prompt_add_shine" />
 
         <!--==============================
-                    Layout prompt
+               Layout translations
+        ==============================-->
+        <include
+            android:id="@+id/layout_translations"
+            layout="@layout/layout_translations" />
+
+        <!--==============================
+               Layout prompt
         ==============================-->
         <include
             android:id="@+id/layout_prompt"
-            layout="@layout/layout_prompt"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/guideH_15"
-            app:layout_constraintWidth_percent="0.999" />
+            layout="@layout/layout_prompt" />
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
 </layout>
