--- a/app/src/main/res/screens/dictionary/include_components/layout/layout_translations.xml
+++ b/app/src/main/res/screens/dictionary/include_components/layout/layout_translations.xml
@@ -5,13 +5,13 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/colorFogging">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_translations"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorFogging">
+            android:layout_height="wrap_content">
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideV_80"
