--- a/app/src/main/res/screens/dictionary/include_components/layout/layout_word_creator.xml
+++ b/app/src/main/res/screens/dictionary/include_components/layout/layout_word_creator.xml
@@ -154,6 +154,7 @@
             android:id="@+id/layout_prompt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
             <EditText
                 android:id="@+id/edit_prompt"
                 android:layout_width="match_parent"
@@ -170,4 +171,5 @@
             android:id="@+id/layout_translations"
             layout="@layout/layout_translations" />
 
-</androidx.constraintlayout.motion.widget.MotionLayout></layout>
+    </androidx.constraintlayout.motion.widget.MotionLayout>
+</layout>
