Update Animate fabBack, fabAdd

--- a/app/src/main/res/screens/dictionary/include_components/layout/layout_word_creator.xml
+++ b/app/src/main/res/screens/dictionary/include_components/layout/layout_word_creator.xml
@@ -149,7 +149,7 @@
 
         <!--==============================
                Fab add
-        ==============================-->
+            ==============================-->
         <ImageButton
             android:id="@+id/fab_add"
             android:layout_width="0dp"
@@ -159,6 +159,19 @@
             android:focusable="true"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_add" />
+
+        <!--==============================
+               Fab back
+            ==============================-->
+        <ImageButton
+            android:id="@+id/fab_back"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/fab_state"
+            android:clickable="true"
+            android:focusable="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_back" />
 
         <!--==============================
                Layout prompt
