StudyFragment.kt, Animator2.kt

--- a/app/src/main/res/screens/study/layout/item_phrase_study.xml
+++ b/app/src/main/res/screens/study/layout/item_phrase_study.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_motion"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp">
+    app:layoutDescription="@xml/phrase_scene">
 
     <TextView
         android:id="@+id/tv_item_phrase"
@@ -13,11 +14,9 @@
         android:background="@drawable/item_state"
         android:gravity="start"
         android:padding="10dp"
-        android:paddingEnd="40dp"
         android:textSize="24sp"
         android:textStyle="bold"
-        tools:ignore="MissingConstraints"
         tools:text="Phrase phrase phrase Phrase phrase phrase Phrase phrase phrase" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.motion.widget.MotionLayout>
