--- a/app/src/main/res/screens/study/layout/fragment_study.xml
+++ b/app/src/main/res/screens/study/layout/fragment_study.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layoutDescription="@xml/study_scene">
@@ -46,6 +47,43 @@
         android:focusable="true"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_back" />
+
+    <!--==============================
+           TextView count selected words
+        ==============================-->
+    <TextView
+        android:id="@+id/tv_count_selected_words"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/fab_state"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="center"
+        android:text="1"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
+    <!--==============================
+           TextView count selected phrases
+        ==============================-->
+    <TextView
+        android:id="@+id/tv_count_selected_phrases"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/fab_state"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="center"
+        android:text="1"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
+    <!--==============================
+           Layout selected words
+        ==============================-->
+    <include
+        android:id="@+id/layout_selected_words"
+        layout="@layout/layout_selected_words" />
 
     <!--==============================
            Layout phrases
