--- a/app/src/main/res/screens/study/layout/item_word_study.xml
+++ b/app/src/main/res/screens/study/layout/item_word_study.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item_motion"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp">
+    app:layoutDescription="@xml/word_scene">
 
     <TextView
         android:id="@+id/tv_item_word"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@drawable/item_state"
         android:gravity="center"
+        android:text="Word"
         android:textSize="24sp"
-        android:textStyle="bold"
-        tools:ignore="MissingConstraints"
-        tools:text="Word" />
+        android:textStyle="bold" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.motion.widget.MotionLayout>
