counts_selected_wp_scene.xml StudyFragment.kt onClick if - condition!!!

--- a/app/src/main/res/screens/study/layout/fragment_study.xml
+++ b/app/src/main/res/screens/study/layout/fragment_study.xml
@@ -48,6 +48,13 @@
         android:src="@drawable/ic_back" />
 
     <!--==============================
+           Layout selected words
+        ==============================-->
+    <include
+        android:id="@+id/layout_selected_wp"
+        layout="@layout/layout_selected_wp" />
+
+    <!--==============================
            Layout Counts Selected (Word | Phrase)
         ==============================-->
     <include
