--- a/app/src/main/res/screens/study/layout/layout_selected_words.xml
+++ b/app/src/main/res/screens/study/layout/layout_selected_words.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent">
+    android:background="@color/colorWhite">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_list_selected_wp"
+        android:id="@+id/rv_list_selected_words"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:itemCount="1"
+        tools:listitem="@layout/item_word" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
